# tgtg-notifier

./: .gitignore  Dockerfile  Makefile  PLAN.md  README.rst  docker-compose.yaml  pyproject.toml
tests/: test_tgtg_notifier.py
tgtg_notifier/: helpers.py  main.py  models.py
