[tool.poetry]
name = "tgtg-notifier"
version = "0.1.0"
description = ""
authors = ["Max Katz-Christy <maxkatzchristy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
slack-sdk = "^3.11.2"
tgtg = {git = "https://github.com/Dielee/tgtg-python.git"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
